--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,410 @@
+* {
+  font-family: "Open Sans", sans-serif;
+  box-sizing: border-box;
+}
 
+h1 {
+  color: rgb(239, 7, 7);
+  font-size: 2.2em;
+}
+
+h2 {
+  font-size: 2.2em;
+}
+
+h3 {
+  font-size: 2.2em;
+}
+
+h1, h2, h3 {
+  margin-bottom: 10px;
+}
+
+.box-top {
+  padding: 4px 0;
+  text-align: center;
+  background-color: white;
+  color: rgb(0, 0, 0);
+  font-size: 0.9em;
+}
+
+p {
+  font-weight: 200;
+  font-size: 1.8em;
+  line-height: 2rem;
+  color: black;
+}
+
+h1,
+h2,
+h3,
+form label {
+  color: rgb(46, 46, 46);
+  font-size: 2.2em;
+}
+
+header img {
+  width: 100%;
+  height: 10em;
+}
+
+footer {
+  background-color: rgb(239, 7, 7);
+  padding: 10px 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer svg {
+  width: 30px;
+  height: 30px;
+  fill: rgb(206, 206, 206);
+  margin-right: 10px;
+}
+footer a {
+  text-decoration: none;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li a {
+  color: rgb(255, 255, 255);
+  font-size: 0.9em;
+  text-decoration: none;
+}
+footer p {
+  font-size: 0.9em;
+  color: rgb(244, 230, 230);
+}
+
+.bg-grey {
+  background-color: rgb(239, 7, 7);
+}
+
+.text-black {
+  color: black;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+nav {
+  background-color: rgb(239, 7, 7);
+  padding: 1rem 3rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-toggler-icon {
+  color: rgb(9, 10, 10);
+}
+
+nav img {
+  width: 90px;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+}
+
+nav ul li {
+  margin-right: 0em;
+}
+
+nav ul li a .botonera {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-size: 1.8em;
+  font-weight: 300;
+}
+
+.about {
+  padding: 10px 30px;
+}
+.about__box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.about__box--reverse {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+}
+.about__header--left {
+  text-align: left;
+  margin: 10px 0;
+}
+.about__text--md {
+  font-size: 1.1em;
+}
+.about__link--left {
+  display: block;
+  text-align: left;
+  color: rgb(239, 7, 7);
+  text-decoration: none;
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+.about__list--gris {
+  color: rgb(46, 46, 46);
+  list-style: square;
+  padding-left: 80px;
+  font-size: 1.2em;
+  line-height: 1.4em;
+  font-weight: 300;
+  margin: 10px 0;
+}
+
+.tienda {
+  display: grid;
+  grid-template-columns: 20% repeat(2, 1fr);
+  grid-template-rows: 80px repeat(3, 300px);
+  gap: 5px;
+  grid-template-areas: "actions actions actions" "filters track1 track1" "filters track2 track3" "filters track2 track4";
+}
+.tienda .actions {
+  padding: 0 30px;
+  grid-area: actions;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.tienda .actions button {
+  margin-left: 10px;
+  background-color: rgb(239, 7, 7);
+  color: white;
+  padding: 8px;
+  border: none;
+  border-radius: 3px;
+}
+.tienda .actions input {
+  padding: 6px;
+  border-radius: 3px;
+  border: none;
+  background-color: rgb(243, 245, 245);
+}
+.tienda .filters {
+  padding: 0 18px 22px 28px;
+  grid-area: filters;
+}
+.tienda .filters a {
+  color: rgb(0, 0, 0);
+  font-size: 1.5em;
+  text-decoration: none;
+  margin-bottom: 4px;
+  text-transform: lowercase;
+}
+.tienda .filters a:hover {
+  color: rgb(239, 7, 7);
+}
+.tienda .filters span {
+  display: block;
+  color: rgb(0, 0, 0);
+  margin: 10px 0;
+  letter-spacing: 1px;
+  font-size: 1.1em;
+}
+.tienda .filters select {
+  color: rgb(0, 0, 0);
+  border: none;
+  background-color: white;
+  margin-bottom: 10px;
+  font-size: 1em;
+}
+.tienda .filters li {
+  padding-left: 10px;
+  list-style: none;
+}
+.tienda .track1 {
+  grid-area: track1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0 80px;
+  border: rgb(239, 7, 7) 1px;
+}
+.tienda .track1 p {
+  width: 60%;
+  margin-left: 50px;
+  font-size: 1.4em;
+}
+.tienda .track2 {
+  grid-area: track2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 50px;
+  border: rgb(239, 7, 7) 1px;
+}
+.tienda .track2 p {
+  width: 60%;
+  margin-left: 50px;
+  font-size: 1.4em;
+}
+.tienda .track3 {
+  grid-area: track3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: rgb(239, 7, 7) 1px;
+}
+.tienda .track3 p {
+  width: 60%;
+  margin-left: 50px;
+  font-size: 1.4em;
+}
+.tienda .track4 {
+  grid-area: track4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: rgb(239, 7, 7) 1px;
+}
+.tienda .track4 p {
+  width: 60%;
+  margin-left: 50px;
+  font-size: 1.4em;
+}
+.tienda section {
+  border-radius: 10px;
+}
+
+.presentacion {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.presentacion figure {
+  width: 30%;
+  border: solid rgb(46, 46, 46) 1px;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.presentacion figure img {
+  display: flex;
+  margin: 10px;
+}
+.presentacion figure figcaption {
+  color: rgb(0, 0, 0);
+  font-size: 1.8em;
+}
+.presentacion figure p {
+  font-size: 1.4em;
+  line-height: 1.5em;
+  margin-bottom: 15px;
+}
+.presentacion figure button {
+  border: none;
+  padding: 2px 30px;
+  background-color: rgb(239, 7, 7);
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgb(244, 230, 230);
+  text-align: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+@media (width < 1024px) {
+  .presentacion figure {
+    width: 48%;
+  }
+}
+@media (width < 768px) {
+  .presentacion {
+    padding: 0 20px;
+  }
+  .presentacion figure {
+    width: 100%;
+  }
+  footer {
+    flex-direction: column;
+  }
+  footer div:nth-child(2) {
+    margin: 10px 0;
+  }
+  /* about */
+  .about .about__box--reverse,
+  .about .about__box {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about__img--md {
+    width: 300px;
+  }
+  .about h1,
+  .about h2 {
+    text-align: center;
+  }
+  .releases figure {
+    width: 100%;
+    justify-content: space-between;
+    gap: 5px;
+  }
+  .tienda {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "actions" "filters" "track1" "track2" "track3" "track4";
+  }
+  .tienda .actions {
+    justify-content: flex-start;
+  }
+  .tienda .actions input {
+    width: 260px;
+  }
+  .tienda .filters span,
+  .tienda .filters label,
+  .tienda .filters input[type=checkbox],
+  .tienda .filters ul {
+    display: none;
+  }
+  .tienda .filters select {
+    width: 100%;
+    background-color: rgb(243, 245, 245);
+    padding: 6px;
+    border-radius: 3px;
+    margin-top: 20px;
+  }
+  .tienda .track1,
+  .tienda .track2 {
+    flex-direction: column;
+    padding: 10px;
+  }
+  .tienda .track1 p {
+    width: auto;
+    margin-left: 0;
+  }
+}
+@media (min-width: 280px) and (max-width: 320px) {
+  .botonera img {
+    width: 150px;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
