--- a/scss/_presentacion.scss
+++ b/scss/_presentacion.scss
@@ -1,3 +1,8 @@
+body{
+    background-image: url(../img/fondo.avif);
+    background-repeat: repeat;
+    background-attachment:fixed;
+}
 .presentacion{
     display: flex;
     flex-direction: row;
