--- a/css/main.css
+++ b/css/main.css
@@ -49,32 +49,29 @@ header img {
 }
 
 footer {
-  background-color: rgb(239, 7, 7);
-  padding: 10px 60px;
+  background-color: rgb(63, 48, 48);
+  padding: 5px 30px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
+  height: 6em;
+  margin-top: 4px;
 }
 footer svg {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   fill: rgb(206, 206, 206);
   margin-right: 10px;
+  margin-bottom: 5px;
 }
 footer a {
   text-decoration: none;
 }
-footer ul {
-  list-style: none;
-}
-footer ul li a {
-  color: rgb(255, 255, 255);
-  font-size: 0.9em;
-  text-decoration: none;
-}
 footer p {
-  font-size: 0.9em;
+  font-size: 0.5em;
   color: rgb(244, 230, 230);
+  margin-bottom: 5px;
 }
 
 .bg-grey {
@@ -174,7 +171,7 @@ nav ul li a .botonera {
 
 .tienda {
   display: grid;
-  grid-template-columns: 20% repeat(2, 1fr);
+  grid-template-columns: 20% 30% 40%;
   grid-template-rows: 80px repeat(3, 300px);
   gap: 5px;
   grid-template-areas: "actions actions actions" "filters track1 track1" "filters track2 track3" "filters track2 track4";
@@ -220,7 +217,9 @@ nav ul li a .botonera {
   color: rgb(0, 0, 0);
   margin: 10px 0;
   letter-spacing: 1px;
-  font-size: 1.1em;
+  font-size: 1em;
+  text-align: left;
+  margin-bottom: 4px;
 }
 .tienda .filters select {
   color: rgb(0, 0, 0);
@@ -232,6 +231,15 @@ nav ul li a .botonera {
 .tienda .filters li {
   padding-left: 10px;
   list-style: none;
+}
+.tienda .filters label {
+  display: block;
+  color: rgb(0, 0, 0);
+  margin: 10px 0;
+  margin-bottom: 4px;
+  letter-spacing: 1px;
+  font-size: 1em;
+  text-align: left;
 }
 .tienda .track1 {
   grid-area: track1;
@@ -281,9 +289,10 @@ nav ul li a .botonera {
   border: rgb(239, 7, 7) 1px;
 }
 .tienda .track4 p {
-  width: 60%;
+  width: 30%;
   margin-left: 50px;
   font-size: 1em;
+  padding-right: 5px;
 }
 .tienda section {
   border-radius: 10px;
@@ -398,7 +407,7 @@ body {
     margin-top: 20px;
   }
   .tienda .track1,
-  .tienda .track2 {
+  .tienda .track2 .tienda .track3 {
     flex-direction: column;
     padding: 10px;
   }
