--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,7 +1,7 @@
 *{
     font-family: $mainFont;
     box-sizing: border-box;
-}
+} 
 h1{
     color:$mainColor;
     font-size: $textLg; 
@@ -42,33 +42,28 @@ header img{
     height: 10em;
  }
  footer{
-    background-color: $mainColor;
-    padding: 10px 60px;
+    background-color: rgb(63, 48, 48);
+    padding: 5px 30px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
+    height: 6em;
+    margin-top: 4px;
     svg{
-       width: 30px;
-       height: 30px;
+       width: 20px;
+       height: 20px;
        fill:  rgb(206, 206, 206);
        margin-right: 10px;
+       margin-bottom: 5px;
     }
     a{
        text-decoration: none;
     }
-    ul{
-       list-style: none;
-       li{
-           a{
-               color: rgb(255, 255, 255);
-               font-size: 0.9em;
-               text-decoration: none;
-           }
-       }
-    }
     p{
-        font-size: 0.9em;
+        font-size: 0.5em;
         color: $white;
+        margin-bottom: 5px;
      }    
 }
 .bg-grey{
