--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@ h2 {
 }
 
 h3 {
-  font-size: 2.2em;
+  font-size: 1em;
+  text-align: center;
 }
 
 h1, h2, h3 {
@@ -37,7 +38,6 @@ p {
 
 h1,
 h2,
-h3,
 form label {
   color: rgb(46, 46, 46);
   font-size: 2.2em;
