--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -11,7 +11,8 @@ h2{
 }
 
 h3{
-    font-size: $textLg;
+    font-size: $textSm;
+    text-align: center;
 }
 
 h1,h2,h3{
@@ -32,7 +33,6 @@ p{
 }
 h1,
 h2,
-h3,
 form label{
     color: $secondaryColor;
     font-size: $textLg;
