--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,35 @@ footer p {
   text-align: right;
 }
 
+.custom-card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.custom-card .card-img-top {
+  border-radius: 10px 10px 0 0;
+}
+
+.custom-card .card-title {
+  font-size: 1.2rem;
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+
+.custom-card .card-text {
+  color: #666;
+}
+
+.custom-card .btn {
+  background-color: #ff0000;
+  color: #fff;
+}
+
+.custom-card .btn:hover {
+  background-color: #37130d;
+}
+
 nav {
   background-color: rgb(239, 7, 7);
   padding: 1rem 3rem;
