--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -37,10 +37,11 @@ form label{
     color: $secondaryColor;
     font-size: $textLg;
 }
-header img{
+header{
     width: 100%;
-    height: 10em;
- }
+    position: relative;
+    overflow: hidden;
+}
  footer{
     background-color: rgb(63, 48, 48);
     padding: 5px 30px;
