--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -2,6 +2,9 @@
     .presentacion figure{
         width: 48%;
     }
+    .header-text {
+        font-size: 36px;
+    }
 }
 
 @media (width < 768px){
@@ -66,18 +69,33 @@
         }
         .tienda .track1,
         .tienda .track2
-        .tienda .track3{
+        .tienda .track3
+        .tienda .track4{
             flex-direction: column;
             padding: 10px;
+            width: auto;
         }
         .tienda .track1 p{
             width: auto;
             margin-left: 0;
         }
+        .header-text {
+            font-size: 30px;
+        }
+        
 }
 
 @media (min-width:280px) and (max-width:320px){
     .botonera img{
         width: 150px;
+    }
+    .header-text {
+        font-size: 20px;
+    }
+    .tienda {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .conteiner {
+        width: 100%;
     }
 }
