--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -41,6 +41,7 @@ header{
     width: 100%;
     position: relative;
     overflow: hidden;
+    display: block;
 }
  footer{
     background-color: rgb(63, 48, 48);
