--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -7,9 +7,11 @@ $mainFont:'Open Sans', sans-serif;
 $secondaryFont: verdana, sans-serif;
 
 $textSm:1em;
+$textXSm: 0.5em;
 $textMd:1.8em;
 $textLg:2.2em;
-$textXl:2.5em;
+$textXl:3.8em;
+
 
 $textBold:600;
 $textLight:200;
