--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -43,6 +43,11 @@ header{
     overflow: hidden;
     display: block;
 }
+.header-image {
+    width: 100%;
+    height: auto;
+    display: block;
+}
  footer{
     background-color: rgb(63, 48, 48);
     padding: 5px 30px;
