--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -3,7 +3,7 @@
         width: 48%;
     }
     .header-text {
-        font-size: 36px;
+        font-size: $textXl;
     }
 }
 
@@ -80,7 +80,7 @@
             margin-left: 0;
         }
         .header-text {
-            font-size: 30px;
+            font-size: $textMd;
         }
         
 }
@@ -90,7 +90,7 @@
         width: 150px;
     }
     .header-text {
-        font-size: 20px;
+        font-size: $textXSm;
     }
     .tienda {
         grid-template-columns: repeat(1, 1fr);
