--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -2,21 +2,8 @@
     font-family: $mainFont;
     box-sizing: border-box;
 } 
-h1{
-    color:$mainColor;
-    font-size: $textLg; 
-}
-h2{
-    font-size:$textLg;
-}
-
 h3{
-    font-size: $textSm;
     text-align: center;
-}
-
-h1,h2,h3{
-    margin-bottom: 10px;
 }
 .box-top{
     padding: 4px 0;
@@ -29,13 +16,7 @@ p{
     font-weight: $textLight;
     font-size: $textMd;
     line-height: 2rem;
-    color: black;
-}
-h1,
-h2,
-form label{
-    color: $secondaryColor;
-    font-size: $textLg;
+    color: rgb(44, 44, 44);
 }
 header{
     width: 100%;
@@ -109,7 +90,7 @@ header{
   }
   
   .custom-card .btn {
-    background-color: #ff0000;
+    background-color: $mainColor;
     color: #fff;
   }
   
