--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,32 @@ h3 {
   font-size: 0.9em;
 }
 
+.mapita {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.error {
+  width: 100%;
+}
+
+.botonerror {
+  background-color: rgb(143, 143, 143);
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
 p {
   font-weight: 200;
   font-size: 1.8em;
@@ -288,6 +314,7 @@ nav ul li a .botonera {
   width: 60%;
   margin-left: 50px;
   font-size: 1em;
+  color: rgb(244, 230, 230);
 }
 .tienda .track2 {
   grid-area: track2;
@@ -295,13 +322,14 @@ nav ul li a .botonera {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 50px;
+  padding: 0 80px;
   border: rgb(239, 7, 19) 1px;
 }
 .tienda .track2 p {
   width: 60%;
   margin-left: 50px;
   font-size: 1em;
+  color: rgb(244, 230, 230);
 }
 .tienda .track3 {
   grid-area: track3;
@@ -309,11 +337,13 @@ nav ul li a .botonera {
   justify-content: center;
   align-items: center;
   border: rgb(239, 7, 19) 1px;
+  padding: 0 80px;
 }
 .tienda .track3 p {
   width: 60%;
   margin-left: 50px;
   font-size: 1em;
+  color: rgb(244, 230, 230);
 }
 .tienda .track4 {
   grid-area: track4;
@@ -321,12 +351,14 @@ nav ul li a .botonera {
   justify-content: center;
   align-items: center;
   border: rgb(239, 7, 19) 1px;
+  padding: 0 60px;
 }
 .tienda .track4 p {
   width: 30%;
   margin-left: 50px;
   font-size: 1em;
   padding-right: 5px;
+  color: rgb(244, 230, 230);
 }
 .tienda section {
   border-radius: 10px;
