--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -12,6 +12,28 @@ h3{
     color: rgb(0, 0, 0);
     font-size: 0.9em;
 }
+.mapita{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap ;
+}
+.error{
+    width: 100%;
+}
+.botonerror{
+    background-color:rgb(143, 143, 143);
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+a{
+    text-decoration: none;
+}
 p{
     font-weight: $textLight;
     font-size: $textMd;
@@ -97,5 +119,6 @@ header{
   .custom-card .btn:hover {
     background-color: #37130d;
   }
+
   
 
